+ KnownPixelFormat enum:
  + New Format96bppRgb field
  + New Format128bppRgba field
  + New Format128bppPRgba field
  + New Format8bppGrayScale field
  + New Format32bppGrayScale field
+ New CustomBitmapDataConfig, CustomIndexedBitmapDataConfig types for configuring pixel access of bitmaps with
  custom pixel formats.
+ ColorExtensions class:
  + New ToColor* overloads between sRGB and linear color formats with adjustColorSpace parameter.
+ PColor32 struct:
  + New FromArgb overload
+ PColor64 struct:
  + New FromArgb overload
+ ColorF struct:
  + New FromArgb method
  + New FromGray method
  + New ToGray method
  + New ToOpaque method
+ PColorF struct:
  + New FromArgb method


~~~~~~~~~
* v7.2.0:
~~~~~~~~~

* KGySoft.Drawing.Imaging namespace
===================================
+ The Color64 struct has been made public
+ The ColorF struct has been made public
+ New PColor32 struct
+ New PColor64 struct
+ New PColorF struct
+ Color32 struct:
  + New ToArgbUInt32/ToRgbUInt32 methods
  + New FromArgb/FromRgb overload from uint
* ColorExtensions class:
  + New ToColor/ToColor32/ToColor64/ToColorF/ToPColor32/ToPColor64/ToPColorF methods
  + New ToPremultiplied/ToStraight methods
  + New GetBrightness overloads
  + New GetBrightnessF methods
  + New Blend overloads
  + New TolerantEquals overloads
  * Improving performance (Blend, GetBrightness and some internal conversion operations)
* ColorSpaceHelper class:
  + Adding new ToFloat overload from UInt16
  + Adding new ToUInt16 methods
  + Adding new SrgbToLinear overload from UInt16
  + Adding new LinearToSrgb16Bit method
  + Adding new ToByte overload from UInt16
  - Fixing float-float version of LinearToSrgb for some out-of-bounds values
* Palette class:
  * Grayscale256 method: improving grayscale mapping when working in the linear color space
  + Grayscale16/Grayscale4 methods: special linear color space handling even if directMapping is true
+ PredefinedColorsQuantizer class:
  + New FromCustomFunction overload